Add change universe size